tdd tests for controller + impl
